footer text alignment fixed on all pages

--- a/src/public/styles/Admin.css
+++ b/src/public/styles/Admin.css
@@ -251,9 +251,12 @@
   }
   
   .footer-container {
-    display: flex;
+     display: flex;
     justify-content: space-between;
     align-items: center;
+    max-width: 1200px;
+    margin: auto;
+    flex-wrap: wrap;
   }
   
   .footer-left,
