--- a/src/public/styles/highest_rated.css
+++ b/src/public/styles/highest_rated.css
@@ -260,9 +260,12 @@ main {
 }
 
 .footer-container {
-    display: flex;
+     display: flex;
     justify-content: space-between;
     align-items: center;
+    max-width: 1200px;
+    margin: auto;
+    flex-wrap: wrap;
 }
 
 .footer-left,
