--- a/src/public/styles/my_details.css
+++ b/src/public/styles/my_details.css
@@ -259,9 +259,12 @@
  }
 
  .footer-container {
-     display: flex;
-     justify-content: space-between;
-     align-items: center;
+      display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1200px;
+    margin: auto;
+    flex-wrap: wrap;
  }
 
  .footer-left,
